--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,18 @@ spring:
               - email
               - profile
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: wavi.help@gmail.com
+    password: ${GOOGLE_APP_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 jwt:
   secret:
     key: ${JWT_SECRET_KEY}
