--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,11 @@ spring:
           starttls:
             enable: true
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 jwt:
   secret:
     key: ${JWT_SECRET_KEY}
