--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,9 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd ~/app
+            echo "Bringing down existing containers..."
+            docker compose down
+            
             echo "Pulling latest docker image..."
             docker compose pull springboot-app
             
