feat: redis password 추가 및 host 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,8 +43,9 @@ spring:
 
   data:
     redis:
-      host: localhost
+      host: ${REDIS_IP}
       port: 6379
+      password: ${REDIS_PASSWORD}
 
 jwt:
   secret:
