--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,7 @@ spring:
       host: ${REDIS_IP}
       port: 6379
       password: ${REDIS_PASSWORD}
+      username: ${REDIS_USERNAME}
 
 jwt:
   secret:
